--- a/templates/forum/read.html
+++ b/templates/forum/read.html
@@ -8,6 +8,11 @@
 {% if post %}
     {{ post.title }} <br>
     {{ post.content }} <br>
+
+    {% if request.user == post.member %}
+        <a href="/forum/update/{{ post.id }}">수정</a>
+        <a href="/forum/delete/{{ post.id }}">삭제</a>
+    {% endif %}
 {% endif %}
 </body>
 </html>
