--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mainpage.css">
+    <link rel="stylesheet" href="index.css">
     <title>Mainpage</title>
 
     <style>
@@ -59,19 +59,6 @@
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
         </noscript>
     </footer>
-    
 
-
-      
-        
-      
-
-      
-
-      
-    
-
-    
-    
 </body>
 </html>
