file name change

--- a/templates/board/board_upload.html
+++ b/templates/board/board_upload.html
@@ -35,8 +35,8 @@
                 </div>
             </div>
             <div class="bt_wrap">
-                <a href="view.html" class="on">등록</a>
-                <a href="list.html">취소</a>
+                <a href="board_content.html" class="on">등록</a>
+                <a href="board_title.html">취소</a>
             </div>
         </div>
     </div>
