--- a/templates/board/board_content.html
+++ b/templates/board/board_content.html
@@ -47,8 +47,8 @@
                 </div>
             </div>
             <div class="bt_wrap">
-                <a href="list.html" class="on">목록</a>
-                <a href="edit.html">수정</a>
+                <a href="board_title.html" class="on">목록</a>
+                <a href="board_edit.html">수정</a>
             </div>
         </div>
     </div>
