--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -17,34 +17,26 @@
                 <div class="title">
                     <dl>
                         <dt>제목</dt>
-                        <dd><input type="text" placeholder="제목 입력" value="글 제목이 들어갑니다"></dd>
+                        <dd><input type="text" placeholder="제목 입력" name="board_title"></dd>
                     </dl>
                 </div>
                 <div class="info">
                     <dl>
                         <dt>글쓴이</dt>
-                        <dd><input type="text" placeholder="글쓴이 입력" value="김이름"></dd>
+                        <dd><input type="text" placeholder="글쓴이 입력"></dd>
                     </dl>
                     <dl>
                         <dt>비밀번호</dt>
-                        <dd><input type="password" placeholder="비밀번호 입력" value="1234"></dd>
+                        <dd><input type="password" placeholder="비밀번호 입력"></dd>
                     </dl>
                 </div>
                 <div class="cont">
-                    <textarea placeholder="내용 입력">
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.</textarea>
+                    <textarea placeholder="내용 입력"></textarea>
                 </div>
             </div>
             <div class="bt_wrap">
-                <a href="board_content.html" class="on">수정</a>
-                <a href="board_content.html">취소</a>
+                <a href="read.html" class="on">등록</a>
+                <a href="list.html">취소</a>
             </div>
         </div>
     </div>
