--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -23,42 +23,42 @@
                 </div>
                 <div>
                     <div class="num">6</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
                 </div>
                 <div>
                     <div class="num">5</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
                 </div>
                 <div>
                     <div class="num">4</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
                 </div>
                 <div>
                     <div class="num">3</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
                 </div>
                 <div>
                     <div class="num">2</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
                 </div>
                 <div>
                     <div class="num">1</div>
-                    <div class="title"><a href="board_content.html">글 제목이 들어갑니다.</a></div>
+                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
                     <div class="writer">김이름</div>
                     <div class="date">2023.1.15</div>
                     <div class="count">33</div>
@@ -77,7 +77,7 @@
                 <a href="#" class="bt last">>></a>
             </div>
             <div class="bt_wrap">
-                <a href="board_upload.html" class="on">등록</a>
+                <a href="create.html" class="on">등록</a>
                 <!--<a href="#">수정</a>-->
             </div>
         </div>
