--- a/templates/board/style.css
+++ b/templates/board/style.css
@@ -59,6 +59,11 @@ a {
     color: #fff;
 }
 
+.bt_wrap a.off {
+    background: #cc0000;
+    color: #fff;
+}
+
 .board_list {
     width: 100%;
     border-top: 2px solid #000;
