--- a/templates/comments.html
+++ b/templates/comments.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comments</title>
 </head>
 <body>
-
     <div id="disqus_thread"></div>
     <script>
         (function() { // DON'T EDIT BELOW THIS LINE
