--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -9,8 +9,8 @@
 <body>
     <div class="board_wrap">
         <div class="board_title">
-            <strong>게시판</strong>
-            <p>게시판에 글을 올려주세요.</p>
+            <h1>사진 업로드</h1>
+<!--            <p>게시판에 글을 올려주세요.</p> -->
         </div>
         <div class="board_write_wrap">
             <div class="board_write">
@@ -22,16 +22,12 @@
                 </div>
                 <div class="info">
                     <dl>
-                        <dt>글쓴이</dt>
-                        <dd><input type="text" placeholder="글쓴이 입력"></dd>
-                    </dl>
-                    <dl>
-                        <dt>비밀번호</dt>
-                        <dd><input type="password" placeholder="비밀번호 입력"></dd>
+                        <dt>파일</dt>
+                        <dd><input type="file"  name="board_upload"></dd>
                     </dl>
                 </div>
                 <div class="cont">
-                    <textarea placeholder="내용 입력"></textarea>
+                    <textarea placeholder="내용 입력" name="board_content"></textarea>
                 </div>
             </div>
             <div class="bt_wrap">
