--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -170,33 +170,33 @@
       <caption><h2>회원가입 양식</h2></caption>
       <tr>
           <td class="col1">이름</td>
-          <td class="col2"><input type="text" name="name" maxlength="5"></td>
+          <td class="col2"><input type="text" name="mbr_name" maxlength="5"></td>
       </tr>
       <tr>
           <td class="col1">아이디</td>
           <td class="col2">
-              <input type="text" name="id" maxlength="10">
+              <input type="text" name="mbr_id" maxlength="10">
               <input class='but1' type="button" value="중복확인" onclick="">
           </td>
       </tr>
       <tr>
           <td class="col1">비밀번호</td>
           <td class="col2">
-              <input type="password" name="pwd" maxlength="16">
+              <input type="password" name="mbr_pw" maxlength="16">
               <p>※비밀번호는 <span class="num">문자, 숫자, 특수문자(~!@#$%^&*)의 조합
               10 ~ 16자리</span>로 입력이 가능합니다.</p>
           </td>
       </tr>
       <tr>
           <td class="col1">비밀번호 확인</td>
-          <td class="col2"><input type="password" name="pwdCheck" maxlength="16"></td>
+          <td class="col2"><input type="password" name="mbr_pw" maxlength="16"></td>
       </tr>
       <tr>
           <td class="col1">이메일</td>
           <td class="col2">
-              <input type="text" name="mailid">
+              <input type="text" name="mbr_mail">
               <span class="a">@</span>
-              <input type="text" name="email">
+              <input type="text" name="mbr_mail">
               <select name="mailslc">
                   <option value="self" selected>직접입력</option>
                   <option value="naver">naver.com</option>
