--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -124,8 +124,9 @@
       }
    
 
+
     </style>
-    
+
 </head>
 <body>
 <!-- <footer>
@@ -160,66 +161,67 @@
       </nav>
       
 </footer> -->
-    
 
-    <form method="post" action="">
-        <div class="container">
-      <div class="insert">
-      
-          <table>
-      <caption><h2>회원가입 양식</h2></caption>
-      <tr>
-          <td class="col1">이름</td>
-          <td class="col2"><input type="text" name="mbr_name" maxlength="5"></td>
-      </tr>
-      <tr>
-          <td class="col1">아이디</td>
-          <td class="col2">
-              <input type="text" name="mbr_id" maxlength="10">
-              <input class='but1' type="button" value="중복확인" onclick="">
-          </td>
-      </tr>
-      <tr>
-          <td class="col1">비밀번호</td>
-          <td class="col2">
-              <input type="password" name="mbr_pw" maxlength="16">
-              <p>※비밀번호는 <span class="num">문자, 숫자, 특수문자(~!@#$%^&*)의 조합
-              10 ~ 16자리</span>로 입력이 가능합니다.</p>
-          </td>
-      </tr>
-      <tr>
-          <td class="col1">비밀번호 확인</td>
-          <td class="col2"><input type="password" name="mbr_pw" maxlength="16"></td>
-      </tr>
-      <tr>
-          <td class="col1">이메일</td>
-          <td class="col2">
-              <input type="text" name="mbr_mail">
-              <span class="a">@</span>
-              <input type="text" name="mbr_mail">
-              <select name="mailslc">
-                  <option value="self" selected>직접입력</option>
-                  <option value="naver">naver.com</option>
-                  <option value="gm">gmail.com</option>
-                  <option value="da">daum.com</option>
-                  <option value="yah">yahoo.com</option>
-              </select>
-              <input class='but2' type="button" value="이메일 중복확인" onclick="">
-          </td>
-      </tr>
-      </table>
-      
-    </div>
-   
-    <div class="create">
-      
-          <input class="but3" type="button" value="가입취소" onclick="">
-          <input class="but4" type="button" value="회원가입" onclick="formCheck(this.form)">
-      
-    </div>
-    </div>
-    </form>
 
+<form method="post" action="/member/signup">
+    {% csrf_token %}
+
+    <div class="container">
+        <div class="insert">
+            <table>
+                <caption><h2>회원가입 양식</h2></caption>
+                <tr>
+                    <td class="col1">이름</td>
+                    <td class="col2"><input type="text" name="mbr_name" maxlength="5"></td>
+                </tr>
+                <tr>
+                    <td class="col1">아이디</td>
+                    <td class="col2">
+                        <input type="text" name="mbr_id" maxlength="10">
+                        <input class='but1' type="button" value="중복확인" onclick="">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col1">비밀번호</td>
+                    <td class="col2">
+                        <input type="password" name="mbr_pw" maxlength="16">
+                        <p>※비밀번호는 <span class="num">문자, 숫자, 특수문자(~!@#$%^&*)의 조합
+              8 ~ 16자리</span>로 입력이 가능합니다.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col1">비밀번호 확인</td>
+                    <td class="col2"><input type="password" maxlength="16"></td>
+                </tr>
+                <tr>
+                    <td class="col1">이메일</td>
+                    <td class="col2">
+                        <input type="text" name="mbr_mail">
+                        <span class="a">@</span>
+                        <input type="text" name="mbr_mail">
+                        <select name="mailslc">
+                            <option value="self" selected>직접입력</option>
+                            <option value="naver">naver.com</option>
+                            <option value="gm">gmail.com</option>
+                            <option value="da">daum.com</option>
+                            <option value="yah">yahoo.com</option>
+                        </select>
+                        <input class='but2' type="button" value="이메일 중복확인" onclick="">
+                    </td>
+                </tr>
+            </table>
+
+        </div>
+
+        <div class="create">
+
+            <input class="but3" type="button" value="가입취소" onclick="">
+            <input class="but4" type="submit" value="회원가입"><!-- onclick="formCheck(this.form)"> -->
+
+        </div>
+    </div>
+</form>
+<!--
     <script>
         function formCheck(form) {
             //유효성 검사
@@ -238,8 +240,8 @@
                 form.pwd.focus() ;
                 return ;
             }
-            if(form.pwd.value.length < 10 || form.pwd.value.length > 16) {
-                alert('비밀번호는 10 ~ 16자 사이로 입력하세요.');
+            if(form.pwd.value.length < 8 || form.pwd.value.length > 16) {
+                alert('비밀번호는 8 ~ 16자 사이로 입력하세요.');
                 form.pwd.focus() ;
                 return ;
             }
@@ -269,5 +271,6 @@
             }
      
       </script>
-   </body>
+      -->
+</body>
 </html>
