--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -11,8 +11,8 @@
     <div class="login-wrapper">
         <h2>Login</h2>
         <form method="post" action="#" id="login-form">
-            <input type="text" name="mbr_id" placeholder="Email">
-            <input type="password" name="mbr_pw" placeholder="Password">
+            <input type="text" name="username" placeholder="Email">
+            <input type="password" name="password" placeholder="Password">
             <label for="remember-check">
                 <input type="checkbox" id="remember-check">아이디 저장하기
             </label>
