--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -172,19 +172,19 @@
                 <caption><h2>회원가입 양식</h2></caption>
                 <tr>
                     <td class="col1">이름</td>
-                    <td class="col2"><input type="text" name="mbr_name" maxlength="5"></td>
+                    <td class="col2"><input type="text" name="first_name" maxlength="5"></td>
                 </tr>
                 <tr>
                     <td class="col1">아이디</td>
                     <td class="col2">
-                        <input type="text" name="mbr_id" maxlength="10">
+                        <input type="text" name="username" maxlength="10">
                         <input class='but1' type="button" value="중복확인" onclick="">
                     </td>
                 </tr>
                 <tr>
                     <td class="col1">비밀번호</td>
                     <td class="col2">
-                        <input type="password" name="mbr_pw" maxlength="16">
+                        <input type="password" name="password" maxlength="16">
                         <p>※비밀번호는 <span class="num">문자, 숫자, 특수문자(~!@#$%^&*)의 조합
               8 ~ 16자리</span>로 입력이 가능합니다.</p>
                     </td>
@@ -196,9 +196,9 @@
                 <tr>
                     <td class="col1">이메일</td>
                     <td class="col2">
-                        <input type="text" name="mbr_mail">
+                        <input type="text" name="email">
                         <span class="a">@</span>
-                        <input type="text" name="mbr_mail">
+                        <input type="text" name="email">
                         <select name="mailslc">
                             <option value="self" selected>직접입력</option>
                             <option value="naver">naver.com</option>
