회원가입 기능 완성

--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -173,15 +173,15 @@
             <table>
                 <caption><h2>회원가입 양식</h2></caption>
                 <tr>
-                    <td class="col1">이름</td>
-                    <td class="col2"><input type="text" name="first_name" maxlength="5"></td>
-                </tr>
-                <tr>
                     <td class="col1">아이디</td>
                     <td class="col2">
                         <input type="text" name="username" maxlength="10">
                         <input class='but1' type="button" value="중복확인" onclick="">
                     </td>
+                </tr>
+                <tr>
+                    <td class="col1">이름</td>
+                    <td class="col2"><input type="text" name="first_name" maxlength="5"></td>
                 </tr>
                 <tr>
                     <td class="col1">비밀번호</td>
@@ -198,9 +198,9 @@
                 <tr>
                     <td class="col1">이메일</td>
                     <td class="col2">
-                        <input type="text" name="email">
+                        <input type="text" name="email1">
                         <span class="a">@</span>
-                        <input type="text" name="email">
+                        <input type="text" name="email2">
                         <select name="mailslc">
                             <option value="self" selected>직접입력</option>
                             <option value="naver">naver.com</option>
