--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -10,9 +10,10 @@
 <body>
     <div class="login-wrapper">
         <h2>Login</h2>
-        <form method="post" action="#" id="login-form">
-            <input type="text" name="username" placeholder="Email">
-            <input type="password" name="password" placeholder="Password">
+        <form method="post" action="/member/login" id="login-form">
+            {% csrf_token %}
+            <input type="text" name="username" placeholder="아이디">
+            <input type="password" name="password" placeholder="비밀번호">
             <label for="remember-check">
                 <input type="checkbox" id="remember-check">아이디 저장하기
             </label>
