--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -15,35 +15,33 @@
         <div class="board_view_wrap">
             <div class="board_view">
                 <div class="title">
-                    글 제목이 들어갑니다.
+                    {{board.board_title}}
                 </div>
                 <div class="info">
                     <dl>
                         <dt>번호</dt>
-                        <dd>1</dd>
+                        <dd>{{board.board_no}}</dd>
                     </dl>
                     <dl>
-                        <dt>글쓴이</dt>
-                        <dd>김이름</dd>
+                        <dt>작성자</dt>
+                        <dd>{{board.id}}</dd>
                     </dl>
                     <dl>
                         <dt>작성일</dt>
-                        <dd>2023.1.16</dd>
+                        <dd>{{board.board_date}}</dd>
                     </dl>
-                    <dl>
-                        <dt>조회</dt>
-                        <dd>33</dd>
-                    </dl>
+<!--                    <dl>-->
+<!--                        <dt>조회</dt>-->
+<!--                        <dd>33</dd>-->
+<!--                    </dl>-->
+                </div>
+
+                <div class="cont">
+                    {{board.board_content}}<br>
                 </div>
                 <div class="cont">
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다<br>
-                    글 내용이 들어갑니다
+                    <a href={{board.board_download}} download><button> 파일 다운로드</button></a>
+
                 </div>
             </div>
             <div class="bt_wrap">
@@ -73,6 +71,6 @@
         (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <noscript><a href="https://disqus.com/?ref_noscript"></a></noscript>
 </body>
 </html>
