--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -19,49 +19,42 @@
                     <div class="title">제목</div>
                     <div class="writer">글쓴이</div>
                     <div class="date">작성일</div>
-                    <div class="count">조회</div>
+<!--                    <div class="count">조회수</div>-->
                 </div>
                 <div>
-                    <div class="num">6</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
+                    <div class="num">{{board.board_no}}</div>
+                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
+                    <div class="writer">{{board.board.id}}</div>
+                    <div class="date">{{board.board_date}}</div>
+<!--                    <div class="count">33</div>-->
                 </div>
                 <div>
-                    <div class="num">5</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
+                    <div class="num">{{board.board_no}}</div>
+                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
+                    <div class="writer">{{board.board.id}}</div>
+                    <div class="date">{{board.board_date}}</div>
+<!--                    <div class="count">33</div>-->
                 </div>
                 <div>
-                    <div class="num">4</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
+                    <div class="num">{{board.board_no}}</div>
+                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
+                    <div class="writer">{{board.board.id}}</div>
+                    <div class="date">{{board.board_date}}</div>
+<!--                    <div class="count">33</div>-->
                 </div>
                 <div>
-                    <div class="num">3</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
+                    <div class="num">{{board.board_no}}</div>
+                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
+                    <div class="writer">{{board.board.id}}</div>
+                    <div class="date">{{board.board_date}}</div>
+<!--                    <div class="count">33</div>-->
                 </div>
                 <div>
-                    <div class="num">2</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
-                </div>
-                <div>
-                    <div class="num">1</div>
-                    <div class="title"><a href="read.html">글 제목이 들어갑니다.</a></div>
-                    <div class="writer">김이름</div>
-                    <div class="date">2023.1.15</div>
-                    <div class="count">33</div>
+                    <div class="num">{{board.board_no}}</div>
+                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
+                    <div class="writer">{{board.board.id}}</div>
+                    <div class="date">{{board.board_date}}</div>
+<!--                    <div class="count">33</div>-->
                 </div>
 
             </div>
