--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -24,7 +24,7 @@
                     </dl>
                     <dl>
                         <dt>작성자</dt>
-                        <dd>{{board.id}}</dd>
+                        <dd>{{board.board.id}}</dd>
                     </dl>
                     <dl>
                         <dt>작성일</dt>
@@ -74,3 +74,4 @@
     <noscript><a href="https://disqus.com/?ref_noscript"></a></noscript>
 </body>
 </html>
+
