--- a/templates/board/style.css
+++ b/templates/board/style.css
@@ -50,6 +50,16 @@ a {
     font-size: 1.4rem;
 }
 
+.bt_wrap button {
+    display: inline-block;
+    min-width: 80px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 2px;
+    font-size: 1.4rem;
+}
+
 .bt_wrap a:first-child {
     margin-left: 0;
 }
