--- a/templates/board/update.html
+++ b/templates/board/update.html
@@ -16,7 +16,7 @@
                 <div class="title">
                     <dl>
                         <dt>제목</dt>
-                        <dd><input type="text" placeholder="제목 입력" value="글 제목이 들어갑니다" name="board_title"></dd>
+                        <dd><input type="text" placeholder="제목 입력" value="{{board.board_title}}" name="board_title"></dd>
                     </dl>
                 </div>
                 <div class="info">
@@ -27,14 +27,8 @@
                 </div>
                 <div class="cont">
                     <textarea placeholder="내용 입력" name="board_content">
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.
-글 내용이 들어갑니다.</textarea>
+{{board.board_content}}
+                    </textarea>
                 </div>
             </div>
             <div class="bt_wrap">
