--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -26,7 +26,7 @@
                 <div class="info">
                     <dl>
                         <dt>파일</dt>
-                        <dd><input type="file"  name="board_upload"></dd>
+                        <dd><input type="file"  name="mos_up"></dd>
                     </dl>
                 </div>
                 <div class="cont">
