--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -21,42 +21,15 @@
                     <div class="date">작성일</div>
 <!--                    <div class="count">조회수</div>-->
                 </div>
+                {% for row in data %}
                 <div>
                     <div class="num">{{board.board_no}}</div>
                     <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board.id}}</div>
+                    <div class="writer">{{board.board_id}}</div>
                     <div class="date">{{board.board_date}}</div>
 <!--                    <div class="count">33</div>-->
                 </div>
-                <div>
-                    <div class="num">{{board.board_no}}</div>
-                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board.id}}</div>
-                    <div class="date">{{board.board_date}}</div>
-<!--                    <div class="count">33</div>-->
-                </div>
-                <div>
-                    <div class="num">{{board.board_no}}</div>
-                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board.id}}</div>
-                    <div class="date">{{board.board_date}}</div>
-<!--                    <div class="count">33</div>-->
-                </div>
-                <div>
-                    <div class="num">{{board.board_no}}</div>
-                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board.id}}</div>
-                    <div class="date">{{board.board_date}}</div>
-<!--                    <div class="count">33</div>-->
-                </div>
-                <div>
-                    <div class="num">{{board.board_no}}</div>
-                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board.id}}</div>
-                    <div class="date">{{board.board_date}}</div>
-<!--                    <div class="count">33</div>-->
-                </div>
-
+                {% endfor %}
             </div>
             <div class="board_page">
                 <a href="#" class="bt first"><<</a>
@@ -77,3 +50,4 @@
     </div>
 </body>
 </html>
+
