모자이크된 이미지 서버에 저장 + 화면에 띄우기

--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="cont">
-                    <img src="{{mos.mos_up.url}}"> <br>
+                    <img src="{{mos.mos_down.url}}"> <br>
                     {{board.board_content}}<br>
                 </div>
                 <div class="cont">
