--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -46,9 +46,9 @@
                 </div>
             </div>
             <div class="bt_wrap">
-                <a href="list.html" class="on">목록</a>
-                <a href="update.html">수정</a>
-                <a href="" class="off">삭제</a>
+                <a href="{% url 'list' %}" class="on">목록</a>
+                <a href="{% url 'update' board_no=board.board_no %}">수정</a>
+                <a href="{% url 'delete' board_no=board.board_no %}" class="off">삭제</a>
             </div>
         </div>
     </div>
