--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'index.css' %}">
     <title>Mosaic The Face</title>
 </head>
 <body>
@@ -76,5 +77,7 @@
           </div>
     </nav>
 </footer>
+{% block content %}
+{% endblock %}
 </body>
 </html>
