--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -44,7 +44,7 @@
                 <a href="#" class="bt last">>></a>
             </div>
             <div class="bt_wrap">
-                <a href="create.html" class="on">등록</a>
+                <a href="{% url 'create' %}" class="on">등록</a>
                 <!--<a href="#">수정</a>-->
             </div>
         </div>
