--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
 
             </ul>
             <form class="btn btn-primary">
-                <button type="button" class="btn btn-primary" onclick="location.href='board/signup.html'">sign up</button>
-                <button type="button" class="btn btn-primary" onclick="location.href='board/login.html'">log in</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'signup' %}'">sign up</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'login' %}'">log in</button>
             </form>
           </div>
         </div>
