--- a/templates/board/update.html
+++ b/templates/board/update.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css.css' %}">
+    <link rel="stylesheet" href="{% static "css.css" %}">
 </head>
 <body>
     <div class="board_wrap">
