--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static "login.css" %}">
     <title>login</title>
 </head>
 <body>
@@ -20,6 +21,8 @@
             <input type="submit" value="Login">
         </form>
     </div>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
 
