--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -10,8 +10,8 @@
 <body>
     <div class="board_wrap">
         <div class="board_title">
-            <strong>게시판</strong>
-            <p>게시판에 글을 올려주세요.</p>
+            <strong>모자이크 게시판</strong>
+<!--            <p>게시판에 글을 올려주세요.</p>-->
         </div>
         <div class="board_list_wrap">
             <div class="board_list">
@@ -22,12 +22,12 @@
                     <div class="date">작성일</div>
 <!--                    <div class="count">조회수</div>-->
                 </div>
-                {% for list in data %}
+                {% for list in board %}
                 <div>
-                    <div class="num">{{board.board_no}}</div>
-                    <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board_id}}</div>
-                    <div class="date">{{board.board_date}}</div>
+                    <div class="num">{{list.board_no}}</div>
+                    <div class="title"><a href="{% url 'read' list.board_no %}">{{list.board_title}}</a></div>
+                    <div class="writer">{{list.member}}</div>
+                    <div class="date">{{list.board_date}}</div>
 <!--                    <div class="count">33</div>-->
                 </div>
                 {% endfor %}
