--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="{% static "css.css" %}">
 </head>
 <body>
+    <header>
+        <link rel="stylesheet" type="text/css" href="{% static "index.css" %}">
+    {% include 'navbar.html' %}
+    </header>
     <div class="board_wrap">
         <div class="board_title">
             <strong>게시판</strong>
-            <p>게시판에 글을 올려주세요.</p>
+<!--            <p>게시판에 글을 올려주세요.</p>-->
         </div>
         <div class="board_list_wrap">
             <div class="board_list">
@@ -24,10 +28,10 @@
                 </div>
                 {% for list in data %}
                 <div>
-                    <div class="num">{{board.board_no}}</div>
+                    <div class="num">{{list.board_no}}</div>
                     <div class="title"><a href="read.html">{{board.board_title}}</a></div>
-                    <div class="writer">{{board.board_id}}</div>
-                    <div class="date">{{board.board_date}}</div>
+                    <div class="writer">{{list.board_id}}</div>
+                    <div class="date">{{list.board_date}}</div>
 <!--                    <div class="count">33</div>-->
                 </div>
                 {% endfor %}
