--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -129,6 +129,10 @@
 
 </head>
 <body>
+    <header>
+        <link rel="stylesheet" href="{% static "index.css" %}">
+    {% include 'navbar.html' %}
+    </header>
 <!-- <footer>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
