--- a/templates/board/read.html
+++ b/templates/board/read.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="{% static "css.css" %}">
 </head>
 <body>
+    <header>
+        <link rel="stylesheet" type="text/css" href="{% static "index.css" %}">
+    {% include 'navbar.html' %}
+    </header>
     <div class="board_wrap">
         <div class="board_title">
             <strong>게시판</strong>
-            <p>게시판에 글을 올려주세요.</p>
         </div>
         <div class="board_view_wrap">
             <div class="board_view">
