--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -130,7 +130,7 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" href="{% static "index.css" %}">
+        <link rel="stylesheet" href="{% static 'index.css' %}">
     {% include 'navbar.html' %}
     </header>
 <!-- <footer>
