--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -129,10 +129,7 @@
 
 </head>
 <body>
-    <header>
-        <link rel="stylesheet" href="{% static 'index.css' %}">
-    {% include 'navbar.html' %}
-    </header>
+
 <!-- <footer>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
@@ -150,7 +147,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Board</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Mypage</a>
                 </li>
@@ -163,7 +160,7 @@
           </div>
         </div>
       </nav>
-      
+
 </footer> -->
 {% if error_message %}
     <p>{{error_message}}</p>
@@ -221,7 +218,7 @@
 
         <div class="create">
 
-            <input class="but3" type="button" value="가입취소" onclick="">
+            <input class="but3" type="button" value="가입취소" onclick="location.href='{% url 'index' %}'">
             <input class="but4" type="submit" value="회원가입"><!-- onclick="formCheck(this.form)"> -->
 
         </div>
