얼굴 객체 검출 후 셔플

--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -38,6 +38,7 @@
                         <dd>
                             <input type="radio" name="type" value="harr" checked>기본 모자이크
                             <input type="radio" name="type" value="shuffle">이미지 섞기
+                            <input type="radio" name="type" value="faceShuffle">얼굴 섞기
                         </dd>
                     </dl>
                 </div>
