--- a/templates/member/signup.html
+++ b/templates/member/signup.html
@@ -199,16 +199,17 @@
                 <tr>
                     <td class="col1">이메일</td>
                     <td class="col2">
-                        <input type="text" name="email1">
-                        <span class="a">@</span>
-                        <input type="text" name="email2">
-                        <select name="mailslc">
-                            <option value="self" selected>직접입력</option>
-                            <option value="naver">naver.com</option>
-                            <option value="gm">gmail.com</option>
-                            <option value="da">daum.com</option>
-                            <option value="yah">yahoo.com</option>
-                        </select>
+                        <input type="email" name="email">
+<!--                        <input type="text" name="email1">-->
+<!--                        <span class="a">@</span>-->
+<!--                        <input type="text" name="email2">-->
+<!--                        <select name="mailslc">-->
+<!--                            <option value="self" selected>직접입력</option>-->
+<!--                            <option value="naver">naver.com</option>-->
+<!--                            <option value="gm">gmail.com</option>-->
+<!--                            <option value="da">daum.com</option>-->
+<!--                            <option value="yah">yahoo.com</option>-->
+<!--                        </select>-->
                         <input class='but2' type="button" value="이메일 중복확인" onclick="">
                     </td>
                 </tr>
