--- a/templates/member/Mypage.html
+++ b/templates/member/Mypage.html
@@ -62,7 +62,7 @@
               <div class="MyPage_cell__title">
                 <span>회원이름</span>
                 <div class=MyPage_cell__body>
-                  <input type="text" name="first_name" value="{{user.first_name}}">
+                  <span>{{user.first_name}}</span>
                 </div>
               </div>
               <div class=MyPage_cell__title>
