--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -37,7 +37,8 @@
                         <dt>모자이크 형식</dt>
                         <dd>
                             <input type="radio" name="type" value="harr" checked>기본 모자이크
-                            <input type="radio" name="type" value="test" checked>test
+                            <input type="radio" name="type" value="test">test
+                            <input type="radio" name="type" value="jia">jia
                             <input type="radio" name="type" value="shuffle">이미지 섞기
                             <input type="radio" name="type" value="faceShuffle">얼굴 섞기
                         </dd>
